<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BanKApp!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="preguntaDepositar">Cuanto vas a depositar?</string>
    <string name="uno">100</string>
    <string name="dos">200</string>
    <string name="tres">300</string>
    <string name="cuatro">400</string>
    <string name="cinco">500</string>
    <string name="seis">600</string>
    <string name="siete">700</string>
    <string name="ocho">800</string>
    <string name="nueve">900</string>
    <string name="mil">1.000</string>
    <string name="tresmil">3.000</string>
    <string name="cincomil">5.000</string>
    <string name="title_activity_mil">Mil</string>
    <string name="title_activity_depositado">Depositado</string>
    <string name="depositCorrect">Depositado Correctamente!</string>
    <string name="ToggleDescontar">Retirar</string>
    <string name="ToggleDepositar">Depositar</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_principal">PrincipalActivity</string>

    <!-- PrincipalActivity -->
    <string name="SelBank">Selección de Banco</string>
    <string name="GlobalMoney">Dinero Global</string>
    <string name="Dolar">Precio Dolar</string>
    <string name="Titulo">Bienvenido</string>
    <string name="title_activity_bancos">BancosActivity</string>

    <!-- BancosActivity -->
    <string name="BBVA">BBVA</string>
    <string name="Santander">Santander Rio</string>
    <string name="Galicia">Galicia</string>
    <string name="TituloBancos">Selecciona el Banco</string>
    <string name="title_activity_global_money">GlobalMoneyActivity</string>
    <string name="title_activity_dolar_blue">DolarBlue</string>
    
    <style name="ButtonText">    
    <item name="android:textColor">#ffffff</item>
    <item name="android:gravity">center</item>    
    <item name="android:textSize">16sp</item>
    <item name="android:textStyle">bold</item>
    <item name="android:shadowColor">#000000</item>
    <item name="android:shadowDx">1</item>
    <item name="android:shadowDy">1</item>
    <item name="android:shadowRadius">2</item>
</style>

</resources>