<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_centerVertical="true"
    tools:context=".PrincipalActivity" >

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Titulo" />

    <Button
        android:id="@+id/SelBank"
        android:layout_width="wrap_content"        
        android:minWidth="180dp"        
        android:layout_height="wrap_content"
        android:layout_below="@+id/Titulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/SelBank"
        android:onClick="selectBank" />  

    <Button
        android:id="@+id/GlobalMoney"
        android:layout_width="wrap_content"        
        android:minWidth="180dp"    
        android:layout_height="wrap_content"
        android:layout_below="@+id/SelBank"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"        
        android:layout_centerVertical="true"
        android:text="@string/GlobalMoney" />
    
      <Button
        android:id="@+id/Dolar"
        android:layout_width="wrap_content" 
        android:minWidth="180dp"    
        android:layout_height="wrap_content"        
        android:layout_below="@+id/GlobalMoney"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/Dolar" />
</RelativeLayout>